tests/ui/specialization/overlap-due-to-unsatisfied-const-bound.stderr
error[E0119]: conflicting implementations of trait `Maybe<()>` for type `()`
  --> $DIR/overlap-due-to-unsatisfied-const-bound.rs:18:1
   |
LL | impl<T> Maybe<T> for T {}
   | ---------------------- first implementation here
LL | impl<T> Maybe<T> for () where T: NotVoid + ?Sized {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `()`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
